--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+
+html {
+  background-color: #222;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.connection-status {
+  transition: all 0.5s;
+  height: 20px;
+  width: calc(100% - 1em);
+  padding: 0.5em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.connection-status-connected {
+  background-color: #080;
+  color: #efe;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.connection-status-disconnected {
+  background-color: #800;
+  color: #fee;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+  background-color: #111;
+  margin: 1em;
+  padding: 0.5em;
+  color: #eee;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+button {
+  transition: all 0.5s;
+  border-radius: 0.2em;
+  background-color: #080;
+  color: #efe;
+  border: none;
+  padding: 0.5em;
+  color: #fff;
+  margin-right: 0.2em;
+  margin-bottom: 0.2em;
+}
+
+button.disconnected {
+  background-color: #777;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+button:hover {
+  background-color: #0a0;
 }
