--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,15 @@
 @import "./styles/all";
 
+html, body {
+    margin: 0;
+}
+
 .app {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    //font-family: $font-family;
     height: 100vh;
     margin: 0;
     padding: 0;
     width: 100vw;
     user-select: none;
-    //font-family: 'Gill Sans Nova';
-    //animation: $slow-fade-in-animation;
-    background: red;
+    font-family: 'Gill Sans Nova';
+    animation: $slow-fade-in-animation;
   }
