--- a/src/styles/metrics.scss
+++ b/src/styles/metrics.scss
@@ -1,21 +1,6 @@
 // metrics
-$window-width: 1920px;
-$window-height: 1080px;
-$sidebar-width: 400px;
-$bottom-bar-height: 60px;
-$tabs-width: 60px;
-
-
+$tabs-height: 80px;
 $font-size: 1vh;
-
-$crop-bottom: $bottom-bar-height;
-$crop-right: $sidebar-width;
-$crop-left: 0;
-$crop-top: 0;
-
-$main-width: $window-width - $crop-left - $crop-right;
-$main-height: $window-height - $crop-top - $crop-bottom;
-$main-aspect-ratio: $main-width / $main-height;
 
 //z-indices
 $z-window-below: -100;
@@ -31,8 +16,6 @@ $z-window-overlay-items: 310;
 $base-padding: 14px;
 $vertical-padding: $base-padding / 2;
 $button-padding: $vertical-padding $base-padding;
-$sidebar-padding: ($base-padding / 2);
-$sidebar-indent: $base-padding;
 
 // popover
 $popover-horizontal-padding: $base-padding / 2;
