Renderable control panel improvements

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,6 +5,7 @@ $blue: #3DBDEE;
 $red: #FF4136;
 $orange: #FF851B;
 $dark-blue: #0E2037;
+$dark-green: rgb(104, 143, 59);
 $very-dark-blue:#171F24;
 $other-blue: #183547;
 
