--- a/src/components/Buttons/ToggleButton.scss
+++ b/src/components/Buttons/ToggleButton.scss
@@ -1,5 +1,21 @@
+
 $button-width: 150px;
 $button-height: $button-width * 0.5;
+
+.toggle-button-wrapper{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.label{
+  color: white;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
 
 .button {
   width: $button-width;
