Tabs changes the current view

--- a/src/views/Layout.scss
+++ b/src/views/Layout.scss
@@ -5,14 +5,14 @@
   flex-direction: column;
 }
 
-.tabsContainer{
+.tabs-container{
   padding-top: 1%;
   height: $tabs-height;
   width: 100%;
   background: $ui-background-solid;
 }
 
-.contentContainer{
+.content-container{
   background: $ui-background-solid;
   height: 90vh;
   width: 100%;
