--- a/src/views/views.scss
+++ b/src/views/views.scss
@@ -1,6 +1,7 @@
-
+@import "../styles/animations.scss";
 
 .view-wrapper{
   display: flex;
   flex-wrap: wrap;
+  animation: $slow-fade-in-animation;
 }
