--- a/src/components/Buttons/ToggleButton.scss
+++ b/src/components/Buttons/ToggleButton.scss
@@ -15,6 +15,7 @@ $button-height: $button-width * 0.5;
   color: white;
   text-transform: uppercase;
   font-size: 0.8rem;
+  padding-right: 10px;
 }
 
 .button {
@@ -36,7 +37,7 @@ $button-height: $button-width * 0.5;
   height: 34px;
 }
 
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
