--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,7 @@
 // color definitions
 $dark-grey: #181818;
 $green: #D9DA6D;
-$blue: #3DBDEE;
+$blue: #2196F3;
 $red: #FF4136;
 $orange: #FF851B;
 $dark-blue: #0E2037;
