--- a/src/components/Controls/ToolBar.scss
+++ b/src/components/Controls/ToolBar.scss
@@ -5,6 +5,6 @@
   height: 60px;
   background-color: rgba(white, 0.3);
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
 }
